fixed the gap on the items of the sidebar

--- a/simulator/css/output.css
+++ b/simulator/css/output.css
@@ -55,7 +55,7 @@ body {
     justify-content: flex-start;
     flex-direction: column;
     grid-area: sidebar;
-    padding: 6vh 5px;
+    padding: 6vh 5px 10px;
     box-sizing: border-box;
     height: 100%;
 }
@@ -73,7 +73,7 @@ body {
     flex-direction: column;
 }
 #sidebar.close {
-    padding: 6vh 5px;
+    padding: 6vh 5px 10px;
     width: 60px;
 }
 #sidebar svg {
@@ -110,7 +110,7 @@ body {
 }
 #sidebar .sub-menu div a {
     /* padding-left: 1em; */
-    margin-bottom: 12px;
+    margin-bottom: 6px;
 }
 #sidebar .sub-menu.show {
     grid-template-rows: 1fr;
@@ -123,7 +123,7 @@ body {
     background: none;
     border: none;
     font: inherit;
-    margin-bottom: 12px;
+    margin-bottom: 6px;
     transition: all ease 250ms;
     border-radius: 8px;
 }
@@ -180,7 +180,7 @@ body {
     flex-direction: column;
     height: 100%;
     flex-grow: 1;
-    gap: 12px;
+    gap: 6px;
     /* overflow-y: auto; */
     min-height: 0;
 }
@@ -200,7 +200,7 @@ body {
 
 .sidebar-profile {
     margin-top: auto;
-    a {margin-bottom: 12px;}
+    a {margin-bottom: 6px;}
 }
 
 .main {
